argocd-apps/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: computer-academy
  namespace: computer-academy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: computer-academy
  strategy:
    canary:
      canaryService: computer-academy-canary
      stableService: computer-academy-stable
      trafficRouting:
        nginx:
          ingress: ingress-nginx-controller  # Your nginx-ingress
      steps:
      - setWeight: 20
      - pause: {duration: 300}  # 5 minutes monitoring
      - setWeight: 40
      - pause: {duration: 300}
      - setWeight: 60
      - pause: {duration: 300}
      - setWeight: 80
      - pause: {duration: 300}
      - setWeight: 100
  template:
    metadata:
      labels:
        app: computer-academy
        track: canary      
    spec:
      containers:
      - name: computer-academy
        image: ketanmahajan24/computer-academy-webapp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 60
