argocd-apps/service.yaml
# argocd-apps/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: computer-academy-external
  namespace: computer-academy
spec:
  type: NodePort
  selector:
    app: computer-academy  # ALL rollout pods
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 31979  # Worldwide students!
