argocd-apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: computer-academy-ingress
  namespace: computer-academy
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: computer-academy-service
              port:
                number: 80
  # ADD THESE LINES - catches ALL traffic to IP:30115
  defaultBackend:
    service:
      name: computer-academy-service
      port:
        number: 80
